[package]
authors = ["Wim Looman <wim@nemo157.com>"]
name = "vdom-rsjs"
version = "0.1.0"

[dependencies]
serde_derive = "1.0.60"
serde_json = "1.0.17"

[dev-dependencies]
futures = "0.1"
tokio-core = "0.1.17"
websocket = "0.20.2"

[dependencies.serde]
version = "1.0.60"
features = ["rc"]

[dependencies.im]
version = "10.2.0"
features = ["serde"]

[features]
nightly = []
default = []
